--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,10 @@ configurations {
 
 tasks.register('testJar', Jar) {
     archiveClassifier.set('test')
-    from sourceSets.test.output
+//    from sourceSets.test.output
+    from(sourceSets.test.output) {
+        include 'com/zmeu/test/**'
+    }
 }
 
 artifacts {
