--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,13 @@ dependencies {
 
     implementation 'org.apache.commons:commons-lang3:3.17.0'
     implementation 'org.jetbrains:annotations:26.0.1'
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jackson"
-    implementation "com.fasterxml.jackson.module:jackson-module-parameter-names:$jackson"
+    testImplementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson"
+    testImplementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jackson"
+    testImplementation "com.fasterxml.jackson.module:jackson-module-parameter-names:$jackson"
 
-    implementation "com.fasterxml.jackson.core:jackson-databind:$jackson"
-    implementation "com.fasterxml.jackson.core:jackson-core:$jackson"
-    implementation "com.fasterxml.jackson.core:jackson-annotations:$jackson"
+    testImplementation "com.fasterxml.jackson.core:jackson-databind:$jackson"
+    testImplementation "com.fasterxml.jackson.core:jackson-core:$jackson"
+    testImplementation "com.fasterxml.jackson.core:jackson-annotations:$jackson"
 
     compileOnly "org.projectlombok:lombok:${lombok}"
     annotationProcessor "org.projectlombok:lombok:${lombok}"
@@ -66,10 +66,10 @@ configurations {
 
 tasks.register('testJar', Jar) {
     archiveClassifier.set('test')
-//    from sourceSets.test.output
-    from(sourceSets.test.output) {
-        include 'com/zmeu/test/**'
-    }
+    from sourceSets.test.output
+//    from(sourceSets.test.output) {
+//        include 'com/zmeu/test/**'
+//    }
 }
 
 artifacts {
