--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.24.2'
     implementation 'org.apache.logging.log4j:log4j-core:2.24.2'
     testImplementation 'org.slf4j:slf4j-jdk14:2.0.16'
-
-    implementation 'org.apache.commons:commons-lang3:3.17.0'
+    implementation 'org.fusesource.jansi:jansi:2.4.2'
+    implementation 'org.apache.commons:commons-lang3:3.18.0'
     implementation 'org.jetbrains:annotations:26.0.1'
 
     compileOnly "org.projectlombok:lombok:${lombok}"
