--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ java {
     }
 }
 generateGrammarSource {
-    maxHeapSize = "64m"
+    maxHeapSize = "128m"
     arguments += ["-visitor", "-Xexact-output-dir", "-package", "io.kite.syntax.ast.generated"]
     outputDirectory = file("${buildDir}/generated-src/antlr/main/io/kite/syntax/ast/generated")
 
@@ -67,6 +67,9 @@ compileJava {
 }
 sourceSets {
     main {
+        antlr {
+            srcDirs = ["grammar"]
+        }
         java {
             srcDirs += ["${buildDir}/generated-src/antlr/main"]
         }
