--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 def lombok = '1.18.42'
 
 dependencies {
-    implementation project(':kite-api')
+    implementation 'cloud.kitelang:kite-api'
     antlr "org.antlr:antlr4:4.13.1"
     implementation "org.antlr:antlr4-runtime:4.13.1"
 
