Set default log level to warn (CLI can override)

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,5 +1,14 @@
-rootLogger=info, STDOUT
+# Default log4j2 configuration for kite-language
+# CLI overrides this with its own log4j2.xml
+
+rootLogger.level=warn
+rootLogger.appenderRef.console.ref=STDOUT
+
 appender.console.type=Console
 appender.console.name=STDOUT
 appender.console.layout.type=PatternLayout
 appender.console.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+
+# Kite logs at warn by default (CLI can override to info/debug)
+logger.kite.name=cloud.kitelang
+logger.kite.level=warn
