Suppress Hibernate connection pool warning in log4j2.properties

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -12,3 +12,7 @@ appender.console.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1
 # Kite logs at warn by default (CLI can override to info/debug)
 logger.kite.name=cloud.kitelang
 logger.kite.level=warn
+
+# Suppress Hibernate connection pool warning (HHH10001002)
+logger.hibernate-pool.name=org.hibernate.orm.connections.pooling
+logger.hibernate-pool.level=error
